home page's content - responsive mobile view:fixed

--- a/index.html
+++ b/index.html
@@ -52,27 +52,24 @@
       <div class="row">
         <div class="col-12">
               <section class="jumbotron text-center">
-                <h1 class="jumbotron-headings animate__animated animate__bounce">
+                <h1 class="jumbotron-headings animate__animated animate__bounce mt-5">
                   Welcome to Thermal Spa
                   </h1>
                   <h2 class="jumbotron-headings">
                   The best spa in town!
                   </h2>
               </section>
-              <hr class="my-4">
-              <div class="mx-auto" style="width: 200px;">
-              <button class="btn-lg btn-dark ms-5 mt-5" type="button">Book Now</button>
-                </div>
-          </div>
-      </div>
+              </div>
+              </div>
     </div>
+              
 </section>
           
   <section class="page-section-about">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h2 class=" text-center text-uppercase section-heading mb-5 ">About Us</h2>
+          <h2 class="text-center text-uppercase section-heading mb-5 ">About Us</h2>
           </div>
           </div>
           <br>
@@ -80,14 +77,14 @@
             <div class= "col-12 col-md-6 pt-4 ">
               <h5 class="text-center section-sub-heading fs-2">A warm Welcome</h5>
               <br>
-              <div class="text-center about-info">
+              <div class="about-info mb-md-0">
               <p>EvimeriaSpa Leisure Centre, located in Putney is one of the most distinctive environments in which to restore mind, body and spirit. Owning its name to Greek word "ευημερία" EvimeriaSpa promises to bring prosperity to the costumers' life while experiencing our luxury and unique services. 
                 With more than 100 years of operation, we work hard to create a friendly day spa environment, that includes a range of modern facilities and provides affordable packages delivered by friendly, trained professionals. 
                 Our therapists harness the power of nature and science to create ground-breaking formulations that genuinely transform your skin.</p>
               </div> 
               </div>
               <div class= "col-12 col-md-6 text-center mb-5">
-                <img src="assets/images/spa-humidifier.jpg" class="about-picture" width="350" height="360"alt="spa-humidifier-image">
+                <img src="assets/images/spa-humidifier.jpg" class="img-fluid section-image" alt="spa-humidifier-image">
               </div>
               </div>
           </div>
@@ -95,15 +92,16 @@
             <section>
               <div class="container-fluid masage-benefits-container">
                 <div class="row">
-               <div class="col-12 text-center benefits-heading my-4">
+               <div class="col-12 text-center benefits-heading mb-5">
                 <h1>Benefits of Massage</h1>
               </div>
                 </div>
                 <div class="row massage-benefits-content">
-                  <div class= "col-12 col-md-6 text-center mb-5">
-                      <img src="assets/images/massage-benefits-picture.jpeg" class="about-picture" width="350" height="400"alt="spa-humidifier-image">
+                  <div class= "col-12 col-md-6 mr-2 text-center mb-5">
+                      <img src="assets/images/massage-benefits-picture.jpeg" class="img-fluid section-image-benefits" alt="facial-treatment">
                     </div>
-                    <div class="col-md-6 shadow p-3 mb-5 bg-body rounded  text-center">
+                    <div class="col-md-6 shadow p-3 mb-5 bg-body rounded massage-benefits-content">
+                      <h1 class="subheading-massage-benefits">Why should you get a massage with us?</h1>
                     <p> Massage is generally considered part of integrative medicine. It's increasingly being offered along with standard treatment for a wide range of medical conditions and situations.
 
                       Massage benefits can include:
