--- a/contact.html
+++ b/contact.html
@@ -59,26 +59,28 @@
   
   <!--Boostrap form copied and then modified-->
   <section class="container-fluid p-5">
-    <div class="row d-flex justify-content-center align-items-center">
+    <div class="row d-flex justify-content-center align-items-center ">
       <div class="col-md-9">
           <div class="contact-us text-center">
               <h3>Contact Us</h3>
               <p class="mb-5">ThermalSpa would love to hear from you and respond within 24 hours</p>
               <div class="row">
-                  <div class="col-md-6 contact-details">
-                      <div class="mt-5 text-center px-3">
-                          <div class="d-flex flex-row align-items-center contact-details"> <span class="icons"><i class="fa fa-map-marker"></i></span>
-                              <div class="address text-left"> <span>Address</span>
+                <div class="col-md-6 contact-details">
+                    <div class="mt-5 text-center px-3">
+                          <div class="d-flex contact-details"> <span class="icons"><i class="fa fa-map-marker font-icon"></i></span>
+                              <div class="address text-left"> 
                                   <p>143 Upper Richmond Road</p>
                               </div>
                           </div>
-                          <div class="d-flex flex-row align-items-center mt-3 contact-details"> <span class="icons"><i class="fa fa-phone"></i></span>
-                              <div class="phone text-left"> <span>Phone</span>
+                          <div class="d-flex mt-3 contact-details"> 
+                              <div class="d-flex phone text-left">
+                                <span class="icons">
+                                <i class="fa fa-phone font-icon"></i> </span>
                                   <p>0789456732</p>
                               </div>
                           </div>
-                          <div class="d-flex flex-row align-items-center mt-3 contact-details"> <span class="icons"><i class="fas fa-envelope-square"></i></span>
-                              <div class="email text-left"> <span>Email</span>
+                          <div class="d-flex align-items-center mt-3 contact-details"> <span class="icons"><i class="fas fa-envelope-square font-icon"></i></span>
+                              <div class="email text-left"> 
                                   <p>thermalspa@gmail.com</p>
                               </div>
                           </div>
@@ -133,7 +135,7 @@
 
     <!-- Form submit button -->
     <div class="d-grid">
-      <button class="btn btn-primary btn-contact" id="submitButton" type="submit">Submit</button>
+      <button class="btn btn-primary btn-contact mb-3" id="submitButton" type="submit">Submit</button>
     </div>
 
   </form>
