--- a/services.html
+++ b/services.html
@@ -67,9 +67,10 @@
     <div class="row treatments-cards">
     <div class="col-12 mb-3 col-md-6 col-lg-3"> 
         <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="/assets/images/massage-treatment-01.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
+              <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
@@ -78,9 +79,10 @@
 
 <div class="col-12 mb-3 col-md-6 col-lg-3"> 
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="/assets/images/massage-treatment-02.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
+          <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
@@ -89,20 +91,22 @@
 
 <div class="col-12 mb-3 col-md-6 col-lg-3"> 
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="/assets/images/massage-treatment-03.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
+          <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
 </div>
 
 <div class="col-12 mb-3 col-md-6 col-lg-3"> 
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="/assets/images/massage-treatment-04.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
+          <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
@@ -111,7 +115,9 @@
 
 
 
-    </div>
+
+
+ 
 </section>
 <footer class="footer-area">
     <div class='container-fluid bg-dark'>
