--- a/services.html
+++ b/services.html
@@ -61,13 +61,19 @@
     <div class="container-fluid">
 <div class="row">
     <div class="col-12">
-        <h2 class="section-heading text-center">Our treatments</h2>
+        <h2 class="section-heading text-center my-5">Body treatments</h2>
     </div>
     </div>
+    <div class="container-fluid treatment-images body-treatment-container mb-5">
+      <div class="row">
+    <div class="col-12">
+     </div>
+</div>
+    </div>
+
     <div class="row treatments-cards">
     <div class="col-12 mb-3 col-md-6 col-lg-3"> 
         <div class="card" style="width: 18rem;">
-            <img src="/assets/images/massage-treatment-01.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
@@ -79,7 +85,6 @@
 
 <div class="col-12 mb-3 col-md-6 col-lg-3"> 
     <div class="card" style="width: 18rem;">
-        <img src="/assets/images/massage-treatment-02.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
@@ -91,7 +96,6 @@
 
 <div class="col-12 mb-3 col-md-6 col-lg-3"> 
     <div class="card" style="width: 18rem;">
-        <img src="/assets/images/massage-treatment-03.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
@@ -103,7 +107,6 @@
 
 <div class="col-12 mb-3 col-md-6 col-lg-3"> 
     <div class="card" style="width: 18rem;">
-        <img src="/assets/images/massage-treatment-04.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
@@ -113,6 +116,181 @@
       </div>
 </div>
 
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-12">
+          <h2 class="section-heading text-center my-5">Facial treatments</h2>
+      </div>
+      </div>
+      <div class="container-fluid treatment-images facial-treatment-banner-image mb-5">
+        <div class="row">
+      <div class="col-12">
+       </div>
+  </div>
+      </div>
+
+
+<div class="row treatments-cards">
+  <div class="col-12 mb-3 col-md-6 col-lg-3"> 
+      <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+</div>
+
+<div class="col-12 mb-3 col-md-6 col-lg-3"> 
+  <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+</div>
+
+<div class="col-12 mb-3 col-md-6 col-lg-3"> 
+  <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+</div>
+
+<div class="col-12 mb-3 col-md-6 col-lg-3"> 
+  <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-12">
+          <h2 class="section-heading text-center my-5">Bamboo massage</h2>
+      </div>
+      </div>
+      <div class="container-fluid treatment-images bamboo-massage-banner-image mb-5">
+        <div class="row">
+      <div class="col-12">
+       </div>
+  </div>
+      </div>
+
+
+<div class="row treatments-cards">
+  <div class="col-12 mb-3 col-md-6 col-lg-3"> 
+      <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+</div>
+
+<div class="col-12 mb-3 col-md-6 col-lg-3"> 
+  <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+</div>
+
+<div class="col-12 mb-3 col-md-6 col-lg-3"> 
+  <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+</div>
+
+<div class="col-12 mb-3 col-md-6 col-lg-3"> 
+  <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+</div>
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-12">
+          <h2 class="section-heading text-center my-5">Sauna</h2>
+      </div>
+      </div>
+      <div class="container-fluid treatment-images sauna-banner-image mb-5">
+        <div class="row">
+      <div class="col-12">
+       </div>
+  </div>
+      </div>
+
+
+<div class="row treatments-cards">
+  <div class="col-12 mb-3 col-md-6 col-lg-3"> 
+      <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+</div>
+
+<div class="col-12 mb-3 col-md-6 col-lg-3"> 
+  <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+</div>
+
+<div class="col-12 mb-3 col-md-6 col-lg-3"> 
+  <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+</div>
+
+<div class="col-12 mb-3 col-md-6 col-lg-3"> 
+  <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+</div>
 
 
 
