fixed: responsive services cards, style:cards elements, added new content

--- a/services.html
+++ b/services.html
@@ -69,52 +69,63 @@
     <div class="col-12">
      </div>
 </div>
-    </div>
-
+</div>
+  
     <div class="row treatments-cards">
-    <div class="col-12 mb-3 col-md-6 col-lg-3"> 
-        <div class="card" style="width: 18rem;">
+    <div class="col-12 mb-3 col-md-6 col-lg-3 treatments-cards"> 
+        <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">De-stress massage<span class="badge badge-sales rounded-pill bg-danger">Sales</span></h5>
+              <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2"></i><del class="strike-through">70£</del><strong>49.99£</strong></div>
+              <p class="card-text">Our De-Stress massage therapy is the modality that comes to mind when most people think about massage. One of the primary goals of this massage is to relax the entire body. This is accomplished by rubbing the muscles with long gliding strokes in the direction of blood returning to the heart. The light to medium pressure helps relieve stress, reduce pain, boost mood and promote relaxation. This massage is exceptionally beneficial for increasing the level of oxygen in the blood. This increase in circulation brings energy-producing nutrients and oxygen to your cells as well as carriers away metabolic waste products that can make you feel listless and drained</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-</div>
+          </div>
 
-<div class="col-12 mb-3 col-md-6 col-lg-3"> 
-    <div class="card" style="width: 18rem;">
+
+<div class="col-12 mb-3 col-md-6 col-lg-3 treatments-cards"> 
+    <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">AROMATHERAPY </h5>
+          <div><i class="far fa-clock"></i>40mins<i class="fas fa-tag ml-2"></i>50£</div>
+          <p class="card-text">Our Aromatherapy Essential Oil Blends are Organic, Toxin Free, High Quality, Not Tested on Animals and Made in England.
+            Essential oils are extracted from herbs, flowers and fruits to naturally enhance wellbeing.They are made up of very small
+            molecules, which means they can easily absorb into the body. The oils have a positive effect on the skin, penetrating into the
+            deeper layers to encourage the process of cellular renewal, enhance blood circulation and
+            help heal health issues such as acne, eczema and aging skin.</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
 </div>
 
-<div class="col-12 mb-3 col-md-6 col-lg-3"> 
-    <div class="card" style="width: 18rem;">
+<div class="col-12 mb-3 col-md-6 col-lg-3 treatments-cards"> 
+    <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">Reflexology<span class="badge bg-secondary bg-success">New</span></h5>
+          <div><i class="far fa-clock"></i>50mins<i class="fas fa-tag ml-2"></i>60£</div>
+          <p class="card-text">Reflexology is used to treat many of the same symptoms that acupuncture is used to treat, including anxiety, headaches, hormone imbalances and digestive problems. After an initial consultation, your reflexologist plans the session according to your symptoms. As you sit or lie comfortably on the treatment table, your reflexologist warms up your feet. Then precise pressure is applied to specific areas of the feet that correspond to certain areas of the body. After the treatment, your therapist may give you a self-care plan or recommend a follow-up appointment if needed. Reflexology is an instantly relaxing and soothing therapy that benefits anyone who suffers from stress and anxiety</p>
           <a href="" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
 </div>
 
-<div class="col-12 mb-3 col-md-6 col-lg-3"> 
-    <div class="card" style="width: 18rem;">
+<div class="col-12 mb-3 col-md-6 col-lg-3 treatments-cards"> 
+    <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title"></h5>
+          <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2"></i>70</div>
+         
+          <p class="card-text">Our Aromatherapy Essential Oil Blends are Organic, Toxin Free, High Quality, Not Tested on Animals and Made in England.
+            Essential oils are extracted from herbs, flowers and fruits to naturally enhance wellbeing.They are made up of very small
+            molecules, which means they can easily absorb into the body. The oils have a positive effect on the skin, penetrating into the
+            deeper layers to encourage the process of cellular renewal, enhance blood circulation and
+            help heal health issues such as acne, eczema and aging skin.</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
 </div>
+
 
 <div class="container-fluid">
   <div class="row">
@@ -127,12 +138,13 @@
       <div class="col-12">
        </div>
   </div>
-      </div>
+  </div>
+      
 
 
 <div class="row treatments-cards">
   <div class="col-12 mb-3 col-md-6 col-lg-3"> 
-      <div class="card" style="width: 18rem;">
+      <div class="card">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
@@ -143,7 +155,7 @@
 </div>
 
 <div class="col-12 mb-3 col-md-6 col-lg-3"> 
-  <div class="card" style="width: 18rem;">
+  <div class="card">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
@@ -154,7 +166,7 @@
 </div>
 
 <div class="col-12 mb-3 col-md-6 col-lg-3"> 
-  <div class="card" style="width: 18rem;">
+  <div class="card">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
@@ -165,7 +177,7 @@
 </div>
 
 <div class="col-12 mb-3 col-md-6 col-lg-3"> 
-  <div class="card" style="width: 18rem;">
+  <div class="card">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
@@ -173,6 +185,7 @@
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
+</div>
 </div>
 
 <div class="container-fluid">
@@ -191,10 +204,10 @@
 
 <div class="row treatments-cards">
   <div class="col-12 mb-3 col-md-6 col-lg-3"> 
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width:25rem;">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
+            <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2"></i>50£</div>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
@@ -202,7 +215,7 @@
 </div>
 
 <div class="col-12 mb-3 col-md-6 col-lg-3"> 
-  <div class="card" style="width: 18rem;">
+  <div class="card" style="width:18rem;">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <div><i class="far fa-clock"></i>90mins<i class="fas fa-tag ml-2">50£</i></div>
