home page: added video for user interaction increase

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               </div> 
               </div>
               <div class= "col-12 col-md-6 text-center mb-5">
-                <img src="/assets/images/spa-humidifier.jpg" class="img-fluid section-image" alt="spa-humidifier-image">
+                <img src="assets/images/spa-humidifier.jpg" class="img-fluid section-image" alt="spa-humidifier-image">
               </div>
               </div>
           </div>
@@ -99,7 +99,7 @@
                 <div class="row massage-benefits-content">
                   <div class="col-12 col-md-6 mb-5">
                     <div class="ratio ratio-16x9 controls autoplay">
-                      <iframe src="/assets/images/pexels-olia-danilevich-9335908.mp4" title="YouTube video" style="max-width: 80%;height: 80%;" allowfullscreen></iframe>
+                      <iframe src="/assets/images/massage-video.mp4" title="YouTube video" style="max-width: 80%;height: 80%;" allowfullscreen></iframe>
                       </div>
                     </div>
                     <div class="col-md-6 shadow p-3 mb-5 bg-body rounded massage-benefits-content">
@@ -154,7 +154,7 @@
                   <div class="carousel-item">
                       <div class="row justify-content-center">
                           <div class="col-12 col-lg-2 pr-3 pt-5 py-lg-5 my-md-auto d-flex justify-content-center ">
-                              <img src="assets/images/reviewer-cosutmer-one.jpg" class="rounded-circle" width="180" height="160" class="spa-costumer-image" alt="Elizabeth Miller">
+                              <img src="/assets/images/massage-video.mp4" class="rounded-circle" width="180" height="160" class="spa-costumer-image" alt="Elizabeth Miller">
                           </div>
                           <div class="col-8 col-lg-6 spa-costumer-review my-lg-auto py-4">
                               <blockquote>ThermalSpa really transform my skin. I can't recommend them enough.
