home page: images responsive positioning, content styling alterations

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center text-uppercase section-heading mb-5 ">About Us</h2>
+          <h2 class="text-center text-uppercase section-heading my-4 ">About Us</h2>
           </div>
           </div>
           <br>
@@ -77,14 +77,14 @@
             <div class= "col-12 col-md-6 pt-4 ">
               <h5 class="text-center section-sub-heading fs-2">A warm Welcome</h5>
               <br>
-              <div class="about-info mb-md-0">
+              <div class="about-info">
               <p>EvimeriaSpa Leisure Centre, located in Putney is one of the most distinctive environments in which to restore mind, body and spirit. Owning its name to Greek word "ευημερία" EvimeriaSpa promises to bring prosperity to the costumers' life while experiencing our luxury and unique services. 
                 With more than 100 years of operation, we work hard to create a friendly day spa environment, that includes a range of modern facilities and provides affordable packages delivered by friendly, trained professionals. 
                 Our therapists harness the power of nature and science to create ground-breaking formulations that genuinely transform your skin.</p>
               </div> 
               </div>
-              <div class= "col-12 col-md-6 text-center mb-5">
-                <img src="assets/images/spa-humidifier.jpg" class="img-fluid section-image" alt="spa-humidifier-image">
+              <div class= "col-12 col-md-5 text-center mb-5">
+                <img src="assets/images/spa-humidifier.jpg" class="img-thumbnail" alt="spa-humidifier-image">
               </div>
               </div>
           </div>
@@ -92,18 +92,18 @@
             <section>
               <div class="container-fluid masage-benefits-container">
                 <div class="row">
-               <div class="col-12 text-center benefits-heading my-5">
-                <h1>Benefits of Massage</h1>
+               <div class="col-12 text-center benefits-heading my-4">
+                <h1 class="section-heading text-uppercase">Benefits of Massage</h1>
               </div>
                 </div>
                 <div class="row massage-benefits-content">
                   <div class="col-12 col-md-6 mb-5">
-                    <div class="ratio ratio-16x9 controls autoplay">
+                    <div class="ratio ratio-16x9 text-center video-promo">
                       <iframe src="assets/images/massage-video.mp4" title="YouTube video" style="max-width: 80%;height: 80%;" allowfullscreen></iframe>
                       </div>
                     </div>
-                    <div class="col-md-6 shadow p-3 mb-5 bg-body rounded massage-benefits-content">
-                      <h1 class="subheading-massage-benefits">Why should you get a massage with us?</h1>
+                    <div class="col-12 col-md-6 shadow p-3 mb-5 bg-body rounded massage-benefits-content">
+                      <h1 class="subheading-massage-benefits text-center">Why should you get a massage with us?</h1>
                     <p> Massage is generally considered part of integrative medicine. It's increasingly being offered along with standard treatment for a wide range of medical conditions and situations.
 
                       Massage benefits can include:
@@ -143,36 +143,37 @@
             </section>
           <section class="page-section-review">
             <div class="container-fluid">     
-                      <div class="row">
-                          <div class="col-xs-12 col-md-6 text-center">
-                              <h1 class="rating-num">
+                      <div class="d-flex flex-row justify-content-center">
+                              <h1 class="rating-num ms-2">
                                   5.0</h1>
-                              <div class="ratings">
+                              <div class="ratings p-3 ms-3">
                                   <i class="fa fa-star rating-color"></i><i class="fa fa-star rating-color"></i><i class="fa fa-star rating-color"></i><i class="fa fa-star rating-color"></i><i class="fa fa-star rating-color"></i></div>
-                             <div class="glyphicon glyphicon-user">
-                      <p>1,050,008 total</p></div>
+                             </div>
+                             <div class="d-flex flex-row justify-content-center">
+                                  <div class="glyphicon glyphicon-user"><p>1,050,008 total</p></div>
                               </div>
                               </div>
+                            </div>
 
                           
                             <div class="d-flex flex-row justify-content-center">
-                                <div class="p-2">Cleanliness</div>
+                                <div class="rating-area p-2">Cleanliness</div>
                                 <div class="ratings"> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> </div>  
                               </div>
                               <div class="d-flex flex-row justify-content-center">
-                                <div class="p-2">Cleanliness</div>
+                                <div class=" rating-area p-2 ms-3">Massage</div>
                                 <div class="ratings"> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> </div>  
                               </div>
-                              <div class="d-flex flex-row justify-content-center" rating-desc">
-                                <div class="p-2">Cleanliness</div>
+                              <div class="d-flex flex-row justify-content-center">
+                                <div class="rating-area p-2 ms-3">Facilities</div>
                                 <div class="ratings"> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> </div>  
                               </div>
-                              <div class="d-flex flex-row justify-content-center" rating-desc">
-                                <div class="p-2">Cleanliness</div>
+                              <div class="d-flex flex-row justify-content-center">
+                                <div class="rating-area p-2 ms-5">Staff</div>
                                 <div class="ratings"> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> </div>  
                               </div>
-                              <div class="d-flex flex-row justify-content-center" rating-desc">
-                                <div class="p-2">Cleanliness</div>
+                              <div class="d-flex flex-row justify-content-center">
+                                <div class="rating-area p-2 ms-5">Price</div>
                                 <div class="ratings"> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> <i class="fa fa-star rating-color"></i> </div>  
                               </div>
                               </div>
