facilites page: added banner image, timetable styled and modified

--- a/facilities.html
+++ b/facilities.html
@@ -28,7 +28,7 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="facilities.html">Facilities</a>
@@ -72,9 +72,8 @@
              <p class="services-info">Our pool is specially designed with anti-slip flooring and the swim area allows for a variety of different activities. You can swim against the swim current which allows you to adjust to your own preferred level.Control your workout intensity, movement and speed with the hydropool, which specifically matches your needs, thus creating the prefect training environment.The hydropool has a Sonos Audio Surround System so you can listen to your favourite music while relaxing or training.</p>
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
-                    <a href="#navPool" class="btn btn-link avaliability-button" role="button">
-                      Check Avaliability
-                  </a>
+                    <a class="btn card-button"href="#navPool" role="button"> Check Avaliability</a>
+                     
                   </div>
               </div>
           </div>
@@ -86,9 +85,7 @@
                 Turkish Hammam offers ancient Turkish traditional methods of bathing to cleanse and exfoliate impurities from the body, using special techniques in the warmth and revitalisation of the Hammam Room.</p>
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
-                    <a href="#navHammam" class="btn btn-link avaliability-button" role="button">
-                      Check Avaliability
-                  </a>
+                    <a class="btn card-button"href="#facilities-timetable" role="button"> Check Avaliability</a>
                   </div>
               </div>
           </div>
@@ -100,9 +97,7 @@ A ‘dry’ heat treatment in a wood-lined room  designed to induce perspiration
               </p>
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
-                    <a href="#navThermal" class="btn btn-link avaliability-button" role="button">
-                      Check Avaliability
-                  </a>
+                    <a class="btn card-button"href="#facilities-timetable" role="button"> Check Avaliability</a>
                   </div>
               </div>
           </div>
@@ -113,16 +108,24 @@ A ‘dry’ heat treatment in a wood-lined room  designed to induce perspiration
             
               <div class="row avaliability-info">
                   <div class="col-12 text-center">
-                      <a href="#navLounge" class="btn btn-link avaliability-button" role="button">
-                          Check Avaliability
-                      </a>
+                    <a class="btn card-button"href="#facilities-timetable" role="button"> Check Avaliability</a>
                   </div>
               </div>
           </div>
       </div>
       </div>
 </section>
-<section class="facilities-timetable">
+
+      <div class="container-fluid treatment-images facilities-massage-banner-image mb-5">
+        <div class="row">
+      <div class="col-12">
+       </div>
+  </div>
+  </div>
+
+
+
+<section class="facilities-timetable" id="facilities-timetable">
   <div class="container-fluid mt-5">
 <div clas="row">
 <div class="col-12">
