added semantic classes to headings, alterations to style, changed font family for designing purposes, changed website's name

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Navigation Bar copied and then modified from Bootstap documentation - https://getbootstrap.com/docs/4.5/components/navbar/-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><i class="fas fa-spa logo-icon"></i>ThermalSpa</a>
+        <a class="navbar-brand" href="index.html"><i class="fas fa-spa logo-icon"></i>Purity Spa</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -54,10 +54,10 @@
         <div class="col-12">
           <section class="jumbotron text-center">
             <h1 class="jumbotron-headings animate__animated animate__bounce mt-5">
-              Welcome to Thermal Spa
+              Welcome to Purity Spa
             </h1>
             <h2 class="jumbotron-headings">
-              The best spa in town!
+              The best  Spa Leisure Centre in town.
             </h2>
           </section>
         </div>
@@ -69,17 +69,17 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center text-uppercase section-heading my-4 ">About Us</h2>
+          <h2 class="text-center section-heading my-4 ">About Us</h2>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-12 col-md-6 pt-4 ">
-          <h5 class="text-center section-sub-heading fs-2">A warm Welcome</h5>
+          <h5 class="text-center section-sub-heading">A warm Welcome</h5>
           <br>
-          <div class="about-info">
-            <p>EvimeriaSpa Leisure Centre, located in Putney is one of the most distinctive environments in which to
-              restore mind, body and spirit. Owning its name to Greek word "ευημερία" EvimeriaSpa promises to bring
+          <div class="section-content">
+            <p>Purity Spa Leisure Centre, located in Putney is one of the most distinctive environments in which to
+              restore mind, body and spirit. Owning its name to Greek word "ευημερία" Purity Spa promises to bring purity and
               prosperity to the costumers' life while experiencing our luxury and unique services.
               With more than 100 years of operation, we work hard to create a friendly day spa environment, that
               includes a range of modern facilities and provides affordable packages delivered by friendly, trained
@@ -98,7 +98,7 @@
     <div class="container-fluid masage-benefits-container">
       <div class="row">
         <div class="col-12 text-center benefits-heading my-4">
-          <h1 class="section-heading text-uppercase">Benefits of Massage</h1>
+          <h1 class="section-heading">Benefits of Massage</h1>
         </div>
       </div>
       <div class="row massage-benefits-content">
@@ -108,8 +108,8 @@
           </div>
         </div>
         <div class="col-12 col-md-6 shadow p-3 mb-5 bg-body rounded massage-benefits-content">
-          <h1 class="subheading-massage-benefits text-center">Why should you get a massage with us?</h1>
-          <p> Massage is generally considered part of integrative medicine. It's increasingly being offered along with
+          <h1 class="section-sub-heading mb-4">Why should you get a massage with us?</h1>
+          <p class="section-content"> Massage is generally considered part of integrative medicine. It's increasingly being offered along with
             standard treatment for a wide range of medical conditions and situations.
 
             Massage benefits can include:
@@ -136,9 +136,6 @@
             Upper back and neck pain
             Beyond the benefits for specific conditions or diseases, some people enjoy massage because it often produces
             feelings of caring, comfort and connection.
-
-            Despite its benefits, massage isn't meant as a replacement for regular medical care. Let your doctor know
-            you're trying massage and be sure to follow any standard treatment plans you have.
           </p>
         </div>
       </div>
@@ -147,37 +144,34 @@
     
 
   </section>
+</section>
 
 
-
-
-
-  </section>
   <footer class="footer-area">
     <div class='container-fluid bg-dark'>
       <div class="row">
         <div class="col-sm-12 mt-4 col-md-6 col-lg-3">
           <div class="timetable">
-            <h4 class="general-heading text-center p-2">Opening Hours</h3>
+            <h4 class="footer-headings text-center p-2">Opening Hours</h3>
           </div>
           <table class="table table-borderless" id="table">
             <tbody>
               <tr>
-                <td>Mon-Fri</td>
+                <td>Weekends</td>
                 <td>9:00-18:00</td>
               </tr>
               <tr>
-                <td>Sat</td>
-                <td>9:00-19:00</td>
+                <td>Saturday</td>
+                <td>9:00-20:00</td>
               </tr>
               <tr>
-                <td>Sun</td>
-                <td>9:00-17:00</td>
+                <td>Sunday</td>
+                <td>9:00-19:00</td>
 
               </tr>
               <tr>
-                <td>Bank holidays</td>
-                <td>9:00-17:00</td>
+                <td>Holidays</td>
+                <td>10:00-17:00</td>
 
               </tr>
             </tbody>
@@ -185,11 +179,11 @@
         </div>
         <div class="col-xs-12 mt-4 col-md-6 col-lg-3">
           <div id="spa-address">
-            <h4 class="general-heading text-center p-2">Get in touch</h4>
-            <div class="contact-details-container">
+            <h4 class="footer-headings text-center p-2">Get in touch</h4>
+            <div class="contact-info-container">
               <ul>
                 <i class="far fa-paper-plane" aria-hidden="true"></i>
-                ThermalSpa</li>
+                Purity Spa</li>
                 <li>143 Upper Richmond Road,</li>
                 <li>Putney</li>
                 <li>London</li>
@@ -204,7 +198,7 @@
                 <li>
                   <a href="mailto:thermalspacenter.gmail.com">
                     <i class="far fa-envelope" aria-hidden="true"></i>
-                    thermalspacenter.gmail.com
+                    purityspacenter.gmail.com
                   </a>
                 </li>
               </ul>
@@ -212,7 +206,7 @@
           </div>
         </div>
         <div class="col-sm-12 mt-4 col-md-6 col-lg-3 text-center p-2">
-          <h4 class="general-heading text-center p-1">Find Us</h4>
+          <h4 class="footer-headings text-center p-1">Find Us</h4>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d148.8976870658205!2d-6.254800827598746!3d53.33675805502598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e98484f0af1%3A0x87ca230452423859!2sEly%20Place%20Upper%2C%20Saint%20Peter&#39;s%2C%20Dublin!5e0!3m2!1sen!2sie!4v1600414698068!5m2!1sen!2sie"
             style="border:0;" allowfullscreen="" aria-hidden="false"
@@ -220,7 +214,7 @@
           </iframe>
         </div>
         <div class="col-sm-12 mt-4 col-md-6 col-lg-3 p-2">
-          <h4 class="general-heading text-center p-1">Social Media</h4>
+          <h4 class="footer-headings text-center p-1">Follow Us</h4>
           <ul class="list-inline ">
             <li class="list-inline-item social-links text-center">
               <a class="btn btn-primary" style="background-color: #3b5998;" href="#!" role="button"><i
@@ -245,8 +239,8 @@
       </div>
       <div class="row">
         <div class="col-lg-12 mt-3 col-md-12 mt-2 col-sm-12 mt-2 col-xs-12 mt-2 text-center">
-          <div class="footer-bottom">
-            <p>© 2021 Copyright <a href="">ThermalSpa</a>. All Rights Reserved. </p>
+          <div class="footer-copyright">
+            <p>© 2021 Copyright <a href="#">Purity Spa</a>. All Rights Reserved. </p>
           </div>
         </div>
       </div>
