website's performance impoved: added compressed images, class names shortening, removed unnecessary scripts, a href linked

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+ 
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
@@ -41,7 +41,7 @@
     </div>
   </nav>
 </header>
-<div class="container-fluid banner-image-contact-container hero-image-container">
+<div class="container-fluid banner-contact home-image">
     <div class="row">
         <div class="col-12">
             <section class="jumbotron text-center">
@@ -222,21 +222,21 @@
         <h4 class="footer-headings text-center p-1">Follow Us</h4>
         <ul class="list-inline ">
           <li class="list-inline-item social-links text-center">
-            <a class="btn btn-primary" style="background-color: #3b5998;" href="#!" role="button"><i
+            <a class="btn btn-primary" style="background-color: #3b5998;" href="http://www.facebook.com" target="_blank"  role="button"><i
                 class="fab fa-facebook-f"></i></a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-primary" style="background-color: #ac2bac;" href="#!" role="button"><i
+            <a class="btn btn-primary" style="background-color: #ac2bac;" href="http://www.instagram.com" target="_blank"  role="button"><i
                 class="fab fa-instagram"></i></a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-primary" style="background-color: #0082ca;" href="#!" role="button"><i
+            <a class="btn btn-primary" style="background-color: #0082ca;" href="http://www.twitter.com" target="_blank"  role="button"><i
                 class="fab fa-linkedin-in"></i></a>
             <span class="sr-only">Twitter</span>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-primary" style="background-color: #ed302f;" href="#!" role="button"><i
+            <a class="btn btn-primary" style="background-color: #ed302f;" href="http://www.youtube.com" target="_blank"  role="button"><i
                 class="fab fa-youtube"></i></a>
           </li>
         </ul>
@@ -253,7 +253,8 @@
   </div>
 </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+  
+
+</body>
   </html>
