--- a/facilities.html
+++ b/facilities.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+  
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
@@ -42,7 +42,7 @@
   </nav>
 </header>
 
-<div class="container-fluid hero-image-container banner-image-facilities-container">
+<div class="container-fluid hero-container banner-facilities">
   <div class="row">
     
       <div class="col-12">
@@ -116,7 +116,7 @@ A ‘dry’ heat treatment in a wood-lined room  designed to induce perspiration
       </div>
 </section>
 
-      <div class="container-fluid treatment-images facilities-massage-banner-image mb-5">
+      <div class="container-fluid treatment-images facilities-massage-banner mb-5">
         <div class="row">
       <div class="col-12">
        </div>
@@ -380,6 +380,7 @@ A ‘dry’ heat treatment in a wood-lined room  designed to induce perspiration
         </div>
       </div>
   </div>
+  </div>
                        
 
 <!--Lounge Cafe Timetable Tab-->
@@ -488,21 +489,21 @@ A ‘dry’ heat treatment in a wood-lined room  designed to induce perspiration
         <h4 class="footer-headings text-center p-1">Follow Us</h4>
         <ul class="list-inline ">
           <li class="list-inline-item social-links text-center">
-            <a class="btn btn-primary" style="background-color: #3b5998;" href="#!" role="button"><i
+            <a class="btn btn-primary" style="background-color: #3b5998;" href="http://www.facebook.com" target="_blank"  role="button"><i
                 class="fab fa-facebook-f"></i></a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-primary" style="background-color: #ac2bac;" href="#!" role="button"><i
+            <a class="btn btn-primary" style="background-color: #ac2bac;" href="http://www.instagram.com" target="_blank"  role="button"><i
                 class="fab fa-instagram"></i></a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-primary" style="background-color: #0082ca;" href="#!" role="button"><i
+            <a class="btn btn-primary" style="background-color: #0082ca;" href="http://www.twitter.com" target="_blank" role="button"><i
                 class="fab fa-linkedin-in"></i></a>
             <span class="sr-only">Twitter</span>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-primary" style="background-color: #ed302f;" href="#!" role="button"><i
+            <a class="btn btn-primary" style="background-color: #ed302f;" href="http://www.youtube.com" target="_blank" role="button"><i
                 class="fab fa-youtube"></i></a>
           </li>
         </ul>
@@ -511,7 +512,7 @@ A ‘dry’ heat treatment in a wood-lined room  designed to induce perspiration
     <div class="row">
       <div class="col-lg-12 mt-3 col-md-12 mt-2 col-sm-12 mt-2 col-xs-12 mt-2 text-center">
         <div class="footer-copyright">
-          <p>© 2021 Copyright <a href="#">Purity Spa</a>. All Rights Reserved. </p>
+          <p>© 2021 Copyright <a href="index.html">Purity Spa</a>. All Rights Reserved. </p>
         </div>
       </div>
     </div>
@@ -519,7 +520,7 @@ A ‘dry’ heat treatment in a wood-lined room  designed to induce perspiration
   </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </body>
 </html>
