--- a/services.html
+++ b/services.html
@@ -7,8 +7,7 @@
 
     <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
     <title>First Milestone Project</title>
@@ -42,7 +41,7 @@
   </nav>
 </header>
 
-<div class="container-fluid hero-image-container banner-image-facilities-container">
+<div class="container-fluid hero-container banner-facilities">
   <div class="row">
     
       <div class="col-12">
@@ -64,7 +63,7 @@
         <h2 class="section-heading text-center my-5">Body treatments</h2>
     </div>
     </div>
-    <div class="container-fluid treatment-images body-treatment-container mb-5">
+    <div class="container-fluid hero-container body-treatment-container mb-5">
       <div class="row">
     <div class="col-12">
      </div>
@@ -136,7 +135,7 @@
           <h2 class="section-heading text-center my-5">Facial treatments</h2>
       </div>
       </div>
-      <div class="container-fluid treatment-images facial-treatment-banner-image mb-5">
+      <div class="container-fluid hero-container banner-facial mb-5">
         <div class="row">
       <div class="col-12">
        </div>
@@ -207,7 +206,7 @@
           <h2 class="section-heading text-center my-5">Bamboo massage</h2>
       </div>
       </div>
-      <div class="container-fluid treatment-images bamboo-massage-banner-image mb-5">
+      <div class="container-fluid hero-container banner-bamboo mb-5">
         <div class="row">
       <div class="col-12">
        </div>
@@ -279,7 +278,7 @@
           <h2 class="section-heading text-center my-5">Sauna</h2>
       </div>
       </div>
-      <div class="container-fluid treatment-images sauna-banner-image mb-5">
+      <div class="container-fluid hero-container sauna-banner mb-5">
         <div class="row">
       <div class="col-12">
        </div>
@@ -412,28 +411,28 @@
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d148.8976870658205!2d-6.254800827598746!3d53.33675805502598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e98484f0af1%3A0x87ca230452423859!2sEly%20Place%20Upper%2C%20Saint%20Peter&#39;s%2C%20Dublin!5e0!3m2!1sen!2sie!4v1600414698068!5m2!1sen!2sie"
           style="border:0;" allowfullscreen="" aria-hidden="false"
-          title="Google map showing the location of ThermalSpa" tabindex="0">
+          title="Google map showing the location of Purity Spa" tabindex="0">
         </iframe>
       </div>
       <div class="col-sm-12 mt-4 col-md-6 col-lg-3 p-2">
         <h4 class="footer-headings text-center p-1">Follow Us</h4>
         <ul class="list-inline ">
           <li class="list-inline-item social-links text-center">
-            <a class="btn btn-primary" style="background-color: #3b5998;" href="#!" role="button"><i
+            <a class="btn btn-primary" style="background-color: #3b5998;" href="http://www.facebook.com" target="_blank"  role="button"><i
                 class="fab fa-facebook-f"></i></a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-primary" style="background-color: #ac2bac;" href="#!" role="button"><i
+            <a class="btn btn-primary" style="background-color: #ac2bac;" href="http://www.instagram.com" target="_blank"  role="button"><i
                 class="fab fa-instagram"></i></a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-primary" style="background-color: #0082ca;" href="#!" role="button"><i
+            <a class="btn btn-primary" style="background-color: #0082ca;" href="http://www.twitter.com" target="_blank"  role="button"><i
                 class="fab fa-linkedin-in"></i></a>
             <span class="sr-only">Twitter</span>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-primary" style="background-color: #ed302f;" href="#!" role="button"><i
+            <a class="btn btn-primary" style="background-color: #ed302f;" href="http://www.youtube.com" target="_blank" role="button"><i
                 class="fab fa-youtube"></i></a>
           </li>
         </ul>
@@ -450,7 +449,6 @@
   </div>
 </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
   </html>
