--- a/services.html
+++ b/services.html
@@ -409,7 +409,7 @@
       <div class="col-sm-12 mt-4 col-md-6 col-lg-3 text-center p-2">
         <h4 class="footer-headings text-center p-1">Find Us</h4>
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d148.8976870658205!2d-6.254800827598746!3d53.33675805502598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e98484f0af1%3A0x87ca230452423859!2sEly%20Place%20Upper%2C%20Saint%20Peter&#39;s%2C%20Dublin!5e0!3m2!1sen!2sie!4v1600414698068!5m2!1sen!2sie"
+          src="https://maps.google.com/maps?q=143%20Upper%20Richmond%20road&t=&z=13&ie=UTF8&iwloc=&output=embed"
           style="border:0;" allowfullscreen="" aria-hidden="false"
           title="Google map showing the location of Purity Spa" tabindex="0">
         </iframe>
@@ -418,21 +418,21 @@
         <h4 class="footer-headings text-center p-1">Follow Us</h4>
         <ul class="list-inline ">
           <li class="list-inline-item social-links text-center">
-            <a class="btn btn-primary" style="background-color: #3b5998;" href="http://www.facebook.com" target="_blank"  role="button"><i
+            <a class="btn" style="background-color: #3b5998;" href="http://www.facebook.com" target="_blank" `rel="noopener"  role="button"><i
                 class="fab fa-facebook-f"></i></a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-primary" style="background-color: #ac2bac;" href="http://www.instagram.com" target="_blank"  role="button"><i
+            <a class="btn" style="background-color: #ac2bac;" href="http://www.instagram.com" target="_blank" `rel="noopener"  role="button"><i
                 class="fab fa-instagram"></i></a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-primary" style="background-color: #0082ca;" href="http://www.twitter.com" target="_blank"  role="button"><i
+            <a class="btn" style="background-color: #0082ca;" href="http://www.twitter.com" target="_blank" `rel="noopener" role="button"><i
                 class="fab fa-linkedin-in"></i></a>
             <span class="sr-only">Twitter</span>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-primary" style="background-color: #ed302f;" href="http://www.youtube.com" target="_blank" role="button"><i
+            <a class="btn" style="background-color: #ed302f;" href="http://www.youtube.com" target="_blank" `rel="noopener" role="button"><i
                 class="fab fa-youtube"></i></a>
           </li>
         </ul>
@@ -441,14 +441,14 @@
     <div class="row">
       <div class="col-lg-12 mt-3 col-md-12 mt-2 col-sm-12 mt-2 col-xs-12 mt-2 text-center">
         <div class="footer-copyright">
-          <p>© 2021 Copyright <a href="#">Purity Spa</a>. All Rights Reserved. </p>
+          <p>© 2021 Copyright <a href="index.html">Purity Spa</a>. All Rights Reserved. </p>
         </div>
       </div>
     </div>
   </div>
   </div>
 </footer>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+ 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
   </html>
